--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-<link rel="stylesheet" href="../static/login.css">
+<link rel="stylesheet" href="../static/css/login.css">
 
 
 <div class="container">
