--- a/templates/index.html
+++ b/templates/index.html
@@ -5,32 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="../static/css/style.css">
     <!-- <script type="text/javascript" src="../static/js/script.js"></script> -->
     <!-- <script type="text/javascript" src="{{ url_for('static', filename = 'script.js') }}"></script> -->
     <script>
         $(document).ready( function() {
             $('#next').click(function() {
+                $('#user-step-1').show();
                 $.ajax("{{ url_for('lover') }}").done(function (reply) {
-                    $('#container').html(reply);
+                    $('#bot-step-2').html(reply);
                 });
             });
         });
     </script>
 </head>
 <body>
-    {% if session['loggedin'] %}
+    <div class="container">
+        {% if session['loggedin'] %}
         <h3>Xin chao, {{ session['user_id'] }}</h3>
         <a href="{{ url_for('logout') }}">Dang xuat</a>
-        <h4>Ban muon tu van gi hom nay:</h4>
-        <!-- <span><a href="{{ url_for('lover') }}">Lover</a></span> -->
-        <input type="button" id="next" value="Lover" />
-        <div id="container"></div>
-    {% else %}
-        <h3>Xin chao, Khach</h3>
-        <a href="{{ url_for('login') }}">Dang nhap</a>
-        <a href="{{ url_for('register') }}">Dang ky</a>
-    {% endif %}
-
+        <br>
+        <div class="col-md-12">
+            <div id="bot-step-1" class="d-flex p-3" style="justify-content: flex-start">
+                <img src="../static/image/chamhoi-icon-96.png" alt="" class="avatar mr-2">
+                <span class="bot"><h4>Ban muon tu van gi hom nay:</h4></span>
+            </div>
+            <div id="user-step-1" class="d-flex p-3" style="justify-content: flex-end">
+                <span class="user"><input type="button" id="next" value="Lover" /></span>
+                <img src="../static/image/male-profile.jpg" alt="" class="avatar ml-2">
+            </div>
+            <div id="bot-step-2"></div>
+        {% else %}
+            <h3>Xin chao, Khach</h3>
+            <a href="{{ url_for('login') }}">Dang nhap</a>
+            <a href="{{ url_for('register') }}">Dang ky</a>
+        {% endif %}
+        </div>
+    </div>
 </body>
 </html>
