--- a/templates/index.html
+++ b/templates/index.html
@@ -26,17 +26,22 @@
 </head>
 <body>
     <div class="container">
+        <center class="p-4"><h1>LOVE ASSISTANT</h1></center>
         {% if session['loggedin'] %}
-        <h3>Xin chao, {{ session['user_id'] }}</h3>
-        <a href="{{ url_for('logout') }}">Dang xuat</a>
-        <br>
         <div class="col-md-12">
             <div id="bot-step-1" class="d-flex p-3" style="justify-content: flex-start">
                 <img src="../static/image/chamhoi-icon-96.png" alt="" class="avatar mr-2">
-                <span class="bot"><h4>Ban muon tu van gi hom nay:</h4></span>
+                <div style="display: block">
+                    <div class="bot">
+                        <h5>Xin chào, {{ session['user_id'] }}</h5>
+                        <a href="{{ url_for('logout') }}">Logout</a>
+                    </div>
+                    <br>
+                    <div class="bot"><h5>Bạn muốn tôi tư vấn gì hôm nay</h5></div>
+                </div>
             </div>
             <div id="user-step-1" class="d-flex p-3" style="justify-content: flex-end">
-                <span class="user"><input type="button" id="next" value="Lover" /></span>
+                <span class="user" style="background-color: transparent"><input type="button" id="next" value="Lover" /></span>
                 <img src="../static/image/male-profile.jpg" alt="" class="avatar ml-2">
             </div>
             <div id="bot-step-2"></div>
