--- a/templates/register.html
+++ b/templates/register.html
@@ -1,36 +1,205 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <H1>Trang đăng kí</H1>
-    <form method = 'POST'
-        <label>Tên đầy đủ:</label>
-        <br>
-        <input type="text" name='name'>
-        <br><br>
-        <label>Email:</label>
-        <br>
-        <input type="text" name="email">
-        <br><br>
-        <label>Username:</label>
-        <br>
-        <input type="text" name="username">
-        <br><br>
-        <label>Password:</label>
-        <br>
-        <input type="password" name="password">
-        <br><br>
-        <label>Confirm Password</label>
-        <br>
-        <input type="password" name="confirmpassword">
-        <br><br>
-        <button type = "Submit"> Submit</button>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="../static/css/register.css">
+<!------ Include the above in your HEAD tag ---------->
 
+<div class="wrapper fadeInDown">
+<div id="formContent">
+    <div class="text-center">
+        <h1 class="nice ">Registration Form</h1>
+    </div>
+    <form class="form-horizontal" method="post"
+          action="#">
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="name">Name</label>
+
+            <div class="col-md-4">
+                <input id="name" name="fullname" type="text" placeholder="Name" class="form-control input-md" required="">
+                <span class="help-block">Please type in your full name</span>
+            </div>
+        </div>
+
+        <!-- Select Date Of Birth-->
+        <div class="row">
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="selectbasic">Month</label>
+
+                <div class="col-md-1">
+                    <select id="selectbasic" name="month" class="form-control">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                    </select>
+                </div>
+
+
+                <label class="col-md-1 control-label" for="selectbasic">Day</label>
+
+                <div class="col-md-1">
+                    <select id="selectbasic" name="day" class="form-control">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="24">24</option>
+                        <option value="25">25</option>
+                        <option value="26">26</option>
+                        <option value="27">27</option>
+                        <option value="28">28</option>
+                        <option value="29">29</option>
+                        <option value="30">30</option>
+                        <option value="31">31</option>
+                    </select>
+                </div>
+                <label class="col-md-1 control-label" for="selectbasic">Year</label>
+
+                <div class="col-md-2">
+                    <select id="selectbasic" name="year" class="form-control">
+                        <option value="1990">1990</option>
+                        <option value="1991">1991</option>
+                        <option value="1992">1992</option>
+                        <option value="1993">1993</option>
+                        <option value="1994">1994</option>
+                        <option value="1995">1995</option>
+                        <option value="1996">1996</option>
+                        <option value="1997">1997</option>
+                        <option value="1998">1998</option>
+                        <option value="2000">2000</option>
+                        <option value="2001">2001</option>
+                        <option value="2002">2002</option>
+                        <option value="2003">2003</option>
+                        <option value="2004">2004</option>
+                        <option value="2005">2005</option>
+                        <option value="2006">2006</option>
+                        <option value="2007">2007</option>
+                        <option value="2008">2008</option>
+                        <option value="2009">2009</option>
+                        <option value="2010">2010</option>
+                        <option value="2011">2011</option>
+                        <option value="2012">2012</option>
+                        <option value="2013">2013</option>
+                        <option value="2014">2014</option>
+                        <option value="2015">2015</option>
+                        <option value="2016">2016</option>
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                    </select>
+                    <span class="help-block">In A.D.</span>
+                </div>
+            </div>
+        </div>
+        <!-- Gender Input -->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="checkboxes">Gender</label>
+
+            <div class="col-md-4">
+                <div class="checkbox">
+                    <label>
+                        <input name="gender" id="genderboxes-0" value="1" type="radio">
+                        Male
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input name="gender" id="genderboxes-1" value="0" type="radio">
+                        Female
+                    </label>
+                </div>
+                <span class="help-block">Please select your Gender</span>
+
+            </div>
+        </div>
+
+        <!-- username -->
+        <div class="form-group">
+                <label class="col-md-4 control-label" for="name">Username</label>
+                <div class="col-md-4">
+                    <input id="name" name="username" type="text" placeholder="Username" class="form-control input-md" required="">
+                    <span class="help-block">Please enter your Username</span>
+                </div>
+            </div>
+        <!-- password -->
+        <div class="form-group">
+                <label class="col-md-4 control-label" for="name">Password</label>
+                <div class="col-md-4">
+                    <input id="name" name="password" type="password" placeholder="Password" class="form-control input-md" required="">
+                    <span class="help-block">Please type in your Password</span>
+                </div>
+            </div>
+        
+        <!-- password -->
+        <div class="form-group">
+                <label class="col-md-4 control-label" for="name">Confirm Password</label>
+                <div class="col-md-4">
+                    <input id="name" name="confirmpassword" type="password" placeholder="Confirm Password" class="form-control input-md" required="">
+                    <span class="help-block">Please confirm your Password</span>
+                </div>
+            </div>
+
+        <!-- Email input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="password">Email</label>
+
+            <div class="col-md-4">
+                <input id="email" name="email" type="email" placeholder="Email"
+                       class="form-control input-md" required="">
+                <span class="help-block">Please type in your email</span>
+            </div>
+        </div>
+        
+        <!-- Phone input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="password">Phone</label>
+
+            <div class="col-md-4">
+                <input id="phone" name="phone" type="number" placeholder="Phone number"
+                       class="form-control input-md" required="">
+                <span class="help-block">Please provide your Mobile Number</span>
+            </div>
+        </div>
+        <!-- Button (Double) -->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="button1id"></label>
+
+            <div class="col-md-8">
+                <button type="submit" class="btn btn-primary">Save</button>
+                <a id="cancel" name="cancel" class="btn btn-info" href="#">
+                    Cancel</a>
+            </div>
+        </div>
     </form>
-</body>
-</html>
+</div>
+</div>
+</div>
