--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Change password</h1>
-    <form method="POST">
-        <label>Password: </label>
-        <input type="password" name="password">
-        <br><br>
-        <label>New Password: </label>
-        <input type="password" name="newpassword">
-        <br><br>
-        <label>Confirm Password: </label>
-        <input type="password" name="confirmpassword">
-        <br><br>
-        <input type="submit" value="Login">
-    </form>
-</body>
-</html>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Playfair+Display|Quattrocento+Sans:400i" rel="stylesheet">
+<link rel="stylesheet" href="../static/css/login.css">
+
+<div class="wrapper fadeInDown">
+    
+    <div id="formContent">
+      <!-- Icon -->
+      
+      <div class="fadeIn first mb-3 mt-3">
+        <img src="https://www.acelerartech.com/wp-content/uploads/2017/01/Virtual-Assistant-single.png" id="icon" alt="User Icon" />
+      </div>
+      <div class="text-center mt-2 mb-2 font-play"> Change Password</div>
+      <!-- Login Form -->
+      <form method="post">
+        <input type="text" id="password" class="fadeIn second" name="password" placeholder="Password">
+        <input type="text" id="password" class="fadeIn third" name="newpassword" placeholder="New Password">
+        <input type="text" id="password" class="fadeIn third" name="confirmpassword" placeholder="Confirm Password">
+        <input type="submit" class="fadeIn fourth" value="Submit">
+      </form>
+    </div>
+  </div>
