--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=ư, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <form method="POST">
-        <label>Email: </label>
-        <br><br>
-        <input type="text" name="email">
-        <br><br>
-        <input type="submit" value="Send">
-    </form>
-</body>
-</html>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Playfair+Display|Quattrocento+Sans:400i" rel="stylesheet">
+<link rel="stylesheet" href="../static/css/login.css">
+
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+      <div class="fadeIn first mb-3 mt-3">
+        <img src="https://www.acelerartech.com/wp-content/uploads/2017/01/Virtual-Assistant-single.png" id="icon" alt="User Icon" />
+      </div>
+      <div class="text-center mt-3 mb-3 font-play">Password Recovery</div>
+      <form method="post">
+        <input type="text" id="password" class="fadeIn second" name="email" placeholder="Email">
+        <input type="submit" class="fadeIn fourth" value="Submit">
+      </form>
+    </div>
+  </div>
