--- a/templates/lover.html
+++ b/templates/lover.html
@@ -23,9 +23,12 @@
                     <td><label>Ten</label></td>
                     <td><input type="text" name="fullname"></td>
                 </tr>
+                <TD><label>DOB</label></TD>
                 <tr>
-                    <td><label>DOB</label></td>
-                    <td><input type="text" name="dob"></td>
+                    <td><label>Date</label></td>
+                    <td><input type="text" name="date" placeholder="date/time"></td>
+                    <td><label>Year</label></td>
+                    <td><input type="text" name="year"></td>
                 </tr>
                 <tr>
                     <td><label>City</label></td>
