--- a/templates/home.html
+++ b/templates/home.html
@@ -103,7 +103,7 @@
       </div>
     </section>
 
-    <!-- Portfolio Grid
+    Portfolio Grid
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
@@ -199,7 +199,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- About -->
     <section id="about">
