--- a/templates/home.html
+++ b/templates/home.html
@@ -102,7 +102,7 @@
         </div>
       </div>
     </section>
-
+<!-- 
     Portfolio Grid
     <section class="bg-light" id="portfolio">
       <div class="container">
@@ -199,7 +199,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- About -->
     <section id="about">
