--- a/templates/home.html
+++ b/templates/home.html
@@ -76,20 +76,24 @@
         </div>
         <div class="row text-center">
           <div class="col-md-4">
+            <a href="/lover">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Tư Vấn Tình Yêu</h4>
             <p class="text-muted">Chúng tôi sẽ đưa ra những lời khuyên hữu ích phù hợp với tuổi tác và tính cách của đối phương bạn.....  </p>
+          </a>
           </div>
           <div class="col-md-4">
+            <a href="/health">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Chăm Sóc Sức Khoẻ</h4>
             <p class="text-muted">Bạn muốn tăng cân, giảm cân,.... </p>
+            </a>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
