--- a/templates/love.html
+++ b/templates/love.html
@@ -47,7 +47,7 @@
             <div id="user-step-1" class="d-flex p-3" style="justify-content: flex-end">
                 <span class="user bg-transparent"><input type="button" id="next" value="New Lover" /></span>
                 <span class="user bg-transparent"><input type="button" id="calendar" value="Calendar"></span>
-                <span class="user bg-transparent"><input type="button" id="next1" value="Lover" /></span>
+                <a href="{{url_for('lover')}}">Lover </a>
                 <img src="../static/image/male-profile.jpg" alt="" class="avatar ml-2">
             </div>
             <div id="bot-step-2"></div>
