--- a/templates/lover.html
+++ b/templates/lover.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    {% for item in all_lover %}
+    <div> {{item.fullname}}</div>
+    {% endfor %}
 </body>
 </html>
