--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="row text-center">
           <div class="col-md-4">
-            <a href="/lover">
+            <a href="/love">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
