--- a/templates/love.html
+++ b/templates/love.html
@@ -11,9 +11,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link rel="stylesheet" href="../static/css/style.css">
-    <script type="text/javascript" src="../static/js/script.js"></script>
+    <!-- <script type="text/javascript" src="../static/js/script.js"></script> -->
     <!-- <script type="text/javascript" src="{{ url_for('static', filename = 'script.js') }}"></script> -->
-    <!-- <script>
+    <script>
         $(document).ready( function() {
             $('#next').click(function() {
                 $.ajax("{{ url_for('newlover') }}").done(function (reply) {
@@ -21,7 +21,7 @@
                 });
             });
         });
-    </script> -->
+    </script>
     
 </head>
 <body>
