--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
   {% include 'head.html' %}
+  <link rel="stylesheet" href="../static/css/agency.css">
   <body id="page-top">
 
     <!-- Navigation -->
