--- a/templates/love.html
+++ b/templates/love.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="bot-step-1">
                     <div class="bot-mess">
-                        <h5>Xin chào, {{ session['user_id'] }}</h5>
+                        <h5>Xin chào, {{ session['username'] }}</h5>
                         <a href="{{ url_for('logout') }}">Logout</a>
                     </div>
                     <div class="bot-mess"><h5>Tôi là chuyên gia tư vấn tình yêu.<br>Hãy thêm mục tiêu mới hoặc chọn lại mục tiêu đã thêm</h5></div>
